<resources>
    <string name="whoAreYou">Who Are You?</string>
    <string name="caregiverBtnText">Caregiver</string>
    <string name="contactPersonBtnText">Contact Person</string>
    <string name="emailHint">Email: </string>
    <string name="passwordHint">Password: </string>
    <string name="loginBtn">Log in</string>
    <string name="searchHint">Search by full name...</string>
    <string name="logoContentDescription">Pro-Q Logo</string>
    <string name="app_name">Pro-Q</string>
    <string name="client_id">Client Id</string>
    <string name="client_name">Client Name</string>
    <string name="client_phone_number">Client Phone Number</string>
    <string name="client_address">Client Address</string>
    <string name="tasks_for_quot_insert_client_name_quot">Tasks for \"insert client name\":</string>
    <string name="morning">morning</string>
    <string name="afternoon">afternoon</string>
    <string name="evening">evening</string>
    <string name="click_quot_create_tasks_quot_to_get_started">Click \"Create Tasks\" to get started!</string>
    <string name="dashboard">DASHBOARD</string>
    <string name="add_note">add note</string>
    <string name="add_task">add task</string>
    <string name="view_report">view report</string>
    <string name="show_details">show details</string>
    <string name="logoDescription">Pro-Q Logo</string>
    <string name="searchPrompt">Search by last name:</string>
    <string name="search_bar">Search Bar</string>
    <string name="client_gender">Client Gender</string>
    <string name="clientListTitle">List of Matched Clients</string>
    <string name="afternoonTitle">Afternoon</string>
    <string name="add_note_buttonText">Add Note</string>
    <string name="create_task_buttonText">create task</string>
    <string name="view_report_buttonText">View Report</string>
    <string name="eveningTimeWindowLabel">Evening (17:00 - 22:00)</string>
    <string name="afternoonTimeWindowLabel">Afternoon (12:00 - 17:00)</string>
    <string name="morningTimeWindowLabel">Morning (08:00 - 12:00)</string>
    <string name="TaskListLabel">Tasks of the Day</string>
    <string name="swipeInstruction"><![CDATA[<< Swipe to next day\'s task list >>]]></string>
</resources>