<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactMainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="18dp">

        <TextView
            android:id="@+id/dashboardLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dashboard"
            android:textAlignment="center"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="24sp"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="12dp"
            app:cardCornerRadius="8dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/clientDashboardBackground"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/clientId"
                    style="@style/clientInfoDashboard"
                    android:text="@string/client_id" />

                <TextView
                    android:id="@+id/clientName"
                    style="@style/clientInfoDashboard"
                    android:text="@string/client_name" />

                <TextView
                    android:id="@+id/clientPhone"
                    style="@style/clientInfoDashboard"
                    android:text="@string/client_phone_number" />

                <TextView
                    android:id="@+id/clientAddress"
                    style="@style/clientInfoDashboard"
                    android:text="@string/client_address" />

                <TextView
                    android:id="@+id/clientGender"
                    style="@style/clientInfoDashboard"
                    android:text="@string/client_gender" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/noteButton"
                style="@style/dashboardButton"
                android:drawableTop="@drawable/baseline_note_add_24"
                android:text="@string/add_note_buttonText" />

            <Button
                android:id="@+id/taskButton"
                style="@style/dashboardButton"
                android:drawableTop="@drawable/baseline_add_task_24"
                android:text="@string/create_task_buttonText" />

            <Button
                android:id="@+id/reportButton"
                style="@style/dashboardButton"
                android:layout_marginEnd="0dp"
                android:drawableTop="@drawable/baseline_assignment_24"
                android:text="@string/view_report_buttonText" />
        </LinearLayout>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/ViewPagerDay"
            android:layout_width="match_parent"
            android:layout_marginTop="15dp"
            android:layout_height="match_parent" />


    </LinearLayout>


</ScrollView>