<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="136dp"
                android:layout_height="141dp"
                android:layout_gravity="center"
                android:layout_marginTop="180dp"
                app:srcCompat="@drawable/noun_who_4249588" />

            <TextView
                android:id="@+id/whoTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/whoAreYou"
                android:textColor="@color/black"
                android:textSize="28sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/caregiverBtn"
                android:layout_width="203dp"
                android:layout_height="59dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:text="@string/caregiverBtnText" />

            <Button
                android:id="@+id/contactPersonBtn"
                android:layout_width="203dp"
                android:layout_height="59dp"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:text="@string/contactPersonBtnText" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>