<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingStart="8dp"
            android:paddingEnd="8dp">

            <TextView
                android:id="@+id/tasksLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/TaskListLabel"
                android:textAlignment="center"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.cardview.widget.CardView style="@style/timeWindowContainer">

                <LinearLayout
                    android:id="@+id/morningLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/morningBackgroundColor">

                    <TextView
                        android:id="@+id/morningLabel"
                        style="@style/timeWindowLabel"
                        android:text="@string/morningTimeWindowLabel"
                        android:textColor="@color/morningLabelColor" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView style="@style/timeWindowContainer">

                <LinearLayout
                    android:id="@+id/afternoonLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/afternoonBackgroundColor">

                    <TextView
                        android:id="@+id/afternoonLabel"
                        style="@style/timeWindowLabel"
                        android:text="@string/afternoonTimeWindowLabel"
                        android:textColor="@color/afternoonLabelColor" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView style="@style/timeWindowContainer">
                <LinearLayout
                    android:id="@+id/eveningLayout"
                    style="@style/timeWindowContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/eveningBackgroundColor">

                    <TextView
                        android:id="@+id/eveningLabel"
                        style="@style/timeWindowLabel"
                        android:text="@string/eveningTimeWindowLabel"
                        android:textColor="@color/eveningLabelColor" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>